--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <img id="qrImage" src="">
         </div>
         <button onclick="generateQR()">QR Code</button>
+        <p>created by: cibo-24</p>
     </div>
     <script src="api.js"></script>
 </body>
